--- a/css/main.css
+++ b/css/main.css
@@ -28,8 +28,27 @@
   scale: 1.1;
 }
 
-@media (max-width: 400px) {
+.header-container {
+  position: relative;
+}
+
+#particles-js {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+@media (max-width: 768px) {
   .main-heading {
     font-size: 2rem;
+  }
+
+  .coordinators > div {
+    width: 100%;
+    margin-top: 1rem;
+  }
+
+  .coordinators > div:hover {
+    scale: 1;
   }
 }
